# smplmodel_sample

./: .gitignore  CLAUDE.md  main.py  pyproject.toml  view_heatmap.py
data/: 000076.csv  000076.npy
docs/: README.md  api_reference.md  gaze_analysis_guide.md  gaze_mesh_viewer.md  gaze_mesh_visualization_guide.md  gaze_part_analysis_guide.md  heatmap.md  tutorial.md
examples/: example_usage.py
examples/output/: attention_change_points.csv  basic_analysis_results.csv  basic_analysis_results.json  temporal_pattern_analysis.csv  vertex_attention_analysis.csv
examples/sample_data/: sample_gaze_data.csv
lib/: a.py  npy_to_csv.py  obj_to_smpl.py  obj_visualizer.py  vertex_counter.py  vertex_counts.csv  vertex_counts.json
output/: frame_gaze_analysis.csv  gaze_analysis_summary.json  gaze_distribution.csv  gaze_distribution.json  part_gaze_analysis.csv
output/heatmap/: heatmap_statistics.json
output/heatmap_gray/: heatmap_statistics.json
results/User11/: summary.md  (+3 more)
src/: gaze_distribution_analyzer.py  gaze_mesh_visualizer.py  gaze_part_analyzer.py  gaze_timeline_visualizer.py  generate_full_timeline_graph.py  generate_seconds_gaze_graph.py  obj2obj.py  pkl2obj.py  simple_gaze_heatmap.py
use-research-code/: explain_time_llm.py  gaze_analysis_research.py  gaze_llm_analyzer.py  generate_frame_gaze_analysis.py  generate_frame_gaze_analysis_normalized.py  query_qwen3_ollama.py
utils/: chumpy_stub.py  create_sample_tpose.py  create_tpose_mesh.py  create_tpose_mesh_nochumpy.py  create_tpose_mesh_simple.py  gaze_mesh_viewer.py  gaze_part_viewer.py  npy_viewer.py
(+12 files in other folders)
