[project]
name = "smplmodel-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pyglet<2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "smplx>=0.1.28",
    "torch>=2.7.1",
    "trimesh>=4.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]
